--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 		"nette/di": "~2.4.10 || ~3.0",
 		"nette/caching": "~3.0",
 		"nette/http": "~2.4.7 || ~3.0",
-		"nette/utils": "~3.0"
+		"nette/utils": "~3.0",
 		"jenner/redis_sentinel": "*"
 	},
 	"suggest": {
